--- a/awx_send_notification.yml
+++ b/awx_send_notification.yml
@@ -29,17 +29,35 @@
         rt_ticket: "{{ ticket | regex_replace('^TT', '') }}"
       when: api_target == 'RT'
 
-    - name: Get lvl output
+    - name: Set lvl to lvl_1 if defined
       set_fact:
-        lvl: "{{ lvl_1 if lvl_1 is defined else lvl_2 if lvl_2 is defined else lvl_3 if lvl_3 is defined else 'Unknown' }}"
+        lvl: "{{ lvl_1 }}"
+      when: lvl_1 is defined
+
+    - name: Override lvl with lvl_2 if defined
+      set_fact:
+        lvl: "{{ lvl_2 }}"
+      when: lvl_2 is defined
+
+    - name: Override lvl with lvl_3 if defined
+      set_fact:
+        lvl: "{{ lvl_3 }}"
+      when: lvl_3 is defined
+
+    - name: Print lvl
+      debug:
+        msg: "Current lvl: {{ lvl }}"
+      when: lvl is defined
 
     - name: Append data from variables to notification
       set_fact:
         updated_notification: "{{ notification |
           replace('{{ cmd_output }}', lvl.cmd_output | default('')) |
           replace('{{ aux_cmd_output }}', lvl.aux_cmd_output | default('')) |
+          replace('{{ mr_from }}', mr_from | default('')) |
+          replace('{{ mr_to }}', mr_to | default('')) |
           replace('\n', ' \n ') }}"
-      when: lvl.cmd_output is defined or lvl.aux_cmd_output is defined
+      when: lvl.cmd_output is defined or lvl.aux_cmd_output is defined or mr_from is defined or mr_to is defined
 
     - name: Set updated_notification when cmd_output/aux_cmd_output are not defined
       set_fact:
@@ -90,7 +108,7 @@
         headers:
           Content-Type: "application/json"
           Accept: "application/json"
-          Authorization: "Bearer {{ yt_api_token }}"
+          Authorization: "Bearer{{ yt_api_token }}"
         status_code: [200]
       register: response
       when: (api_target == 'YT' and (subject is undefined or subject | trim == ""))
@@ -109,7 +127,7 @@
                 name: "Open"
         headers:
           Content-Type: "application/json"
-          Authorization: "Bearer {{ yt_api_token }}"
+          Authorization: "Bearer{{ yt_api_token }}"
         status_code: [200]
       when: (api_target == 'YT' and (subject is undefined or subject | trim == ""))
 
@@ -119,7 +137,7 @@
         method: GET
         validate_certs: no
         headers:
-          Authorization: "Bearer {{ yt_api_token }}"
+          Authorization: "Bearer{{ yt_api_token }}"
           Accept: "application/json"
         return_content: yes
         status_code: 200
@@ -131,14 +149,14 @@
         tags: "{{ issue_details.json.summary | regex_findall('\\[([^\\]]+)\\]') | select('search', '^(?!update$)', 'i') | map('regex_replace', '^(.+)$', '[\\1]') | join(' ') }}"
       when: issue_details.json.summary is defined
 
-    - name: Create new ticket
+    - name: Create a new ticket
       uri:
         url: "{{ yt_url }}/api/issues"
         method: POST
         validate_certs: no
         body_format: json
         headers:
-          Authorization: "Bearer {{ yt_api_token }}"
+          Authorization: "Bearer{{ yt_api_token }}"
           Content-Type: "application/json"
           Accept: "application/json"
         body: >-
@@ -160,7 +178,7 @@
                 "name": "Status",
                 "$type": "StateIssueCustomField",
                 "value": {
-                  "name": "Stalled"
+                  "name": "{{ status | default('Stalled') }}"
                 }
               },
               {
@@ -171,13 +189,11 @@
                 }
               },
               {
-                "name": "Requester",
-                "$type": "MultiUserIssueCustomField",
-                "value": [
-                  {% for user in issue_details.json.customFields | selectattr('name', 'equalto', 'Requester') | map(attribute='value') | first %}
-                  {"id": "{{ user.id }}"}{% if not loop.last %},{% endif %}
-                  {% endfor %}
-                ]
+                "name": "Customer",
+                "$type": "SingleGroupIssueCustomField",
+                "value": {
+                  "id": "{{ issue_details.json.customFields | selectattr('name', 'equalto', 'Customer') | map(attribute='value.id') | first }}"
+                }
               },
               {
                 "name": "Support Group",
@@ -198,7 +214,7 @@
         method: GET
         validate_certs: no
         headers:
-          Authorization: "Bearer {{ yt_api_token }}"
+          Authorization: "Bearer{{ yt_api_token }}"
           Accept: "application/json"
         return_content: yes
         status_code: 200
@@ -217,7 +233,7 @@
         validate_certs: no
         body_format: json
         headers:
-          Authorization: "Bearer {{ yt_api_token }}"
+          Authorization: "Bearer{{ yt_api_token }}"
           Content-Type: "application/json"
           Accept: "application/json"
         body: >-
@@ -232,6 +248,11 @@
         status_code: 200
       when: api_target == 'YT' and new_ticket_id is defined and subject is defined
 
+    - name: Check response from YT
+      debug:
+        var: yt_response
+      when: api_target == 'YT'
+
     - name: Send list of actions as comment
       uri:
         url: "{{ yt_url }}/api/issues/{{ new_ticket_id }}/comments"
@@ -242,7 +263,7 @@
         headers:
           Content-Type: "application/json"
           Accept: "application/json"
-          Authorization: "Bearer {{ yt_api_token }}"
+          Authorization: "Bearer{{ yt_api_token }}"
         status_code: [200]
       register: response
-      when: api_target == 'YT' and subject is defined
+      when: api_target == 'YT' and subject is defined and actions is defined
