--- a/awx_send_notification.yml
+++ b/awx_send_notification.yml
@@ -180,7 +180,7 @@
                 "name": "Priority",
                 "$type": "SingleEnumIssueCustomField",
                 "value": {
-                  "name": "{{ parent_priority.name }}"
+                  "name": "{{ parent_priority }}"
                 }
               },
               {
