--- a/awx_send_notification.yml
+++ b/awx_send_notification.yml
@@ -171,7 +171,7 @@
                 "name": "Priority",
                 "$type": "SingleEnumIssueCustomField",
                 "value": {
-                  "name": "{{ issue_details.json.customFields | selectattr('name','equalto','Priority') | map(attribute='value') | first }}"
+                  "name": "{{ issue_details.json.customFields | selectattr('name','equalto','Priority') | map(attribute='value.name') | first }}"
                 }
               },
               {
