--- a/awx_universal_command_lvl.yml
+++ b/awx_universal_command_lvl.yml
@@ -38,6 +38,27 @@
             cmd_text: "{{ vars[cmd_var] if vars[cmd_var] is defined else '' }}"
             aux_cmd_text: "{{ vars[aux_cmd_var] if vars[aux_cmd_var] is defined else '' }}"
 
+    - name: replace ticket variable
+      set_fact:
+        "{{ cmd_prefix }}":
+            cmd_text: "{{ vars[cmd_prefix]['cmd_text'] | replace('{{ ticket }}', ticket) }}"
+            aux_cmd_text: "{{ vars[cmd_prefix]['aux_cmd_text'] }}"
+      when: ticket is defined
+
+    - name: replace mr_from variable
+      set_fact:
+        "{{ cmd_prefix }}":
+            cmd_text: "{{ vars[cmd_prefix]['cmd_text'] | replace('{{ mr_from }}', mr_from) }}"
+            aux_cmd_text: "{{ vars[cmd_prefix]['aux_cmd_text'] }}"
+      when: mr_from is defined
+
+    - name: replace mr_to variable
+      set_fact:
+        "{{ cmd_prefix }}":
+            cmd_text: "{{ vars[cmd_prefix]['cmd_text'] | replace('{{ mr_to }}', mr_to) }}"
+            aux_cmd_text: "{{ vars[cmd_prefix]['aux_cmd_text'] }}"
+      when: mr_to is defined
+
     - name: show vars
       debug: var="{{ cmd_prefix }}"
 
