--- a/awx_init_env.yml
+++ b/awx_init_env.yml
@@ -34,6 +34,7 @@
 #      ignore_errors: True
 
 # can use module "synchronize" in case non-exist dest dirs
+
     - name: copy aux files
       ansible.builtin.copy:
         src:  /runner/project/scripts/remote/run_sql.pl
@@ -41,3 +42,23 @@
         mode: preserve
         backup: yes
 
+    - name: ensure destination directory exists
+      ansible.builtin.file:
+        path: "{{ destination_path | dirname }}"
+        state: directory
+        mode: '0755'
+      when:
+        - destination_path is defined
+        - destination_path | length > 0
+
+    - name: copy file
+      ansible.builtin.copy:
+        src: "/runner/project/{{ source_path }}"
+        dest: "{{ destination_path }}"
+        mode: "{{ destination_file_mode | default('preserve') }}"
+        backup: yes
+      when:
+        - source_path is defined
+        - source_path | length > 0
+        - destination_path is defined
+        - destination_path | length > 0
