--- a/awx_show_notification.yml
+++ b/awx_show_notification.yml
@@ -1,36 +1,22 @@
-- hosts: all
+- name: Prepare notifications from templates
+  host: localhost
   gather_facts: no
 
   tasks:
-    - name: define prefixed
-      set_fact:
-        cmd_var: "notification_{{ notification_number }}"
-      when: notification_number is defined
+    - name: Skip it if the notification is already set
+      meta: end_play
+      when: notification is defined
 
-    - name: define non-prefixed
-      set_fact:
-        notification_number: "0"
-      when: notification_number is not defined
+    - name: Fail if notification_key isn't provided
+      fail:
+        msg: "'notification_key' variable is not defined or empty"
+      when: notification_key is undefined
 
-    - name: Check if email_1_text is defined
-      set_fact:
-        notification: "{{ email_1_text }}"
-      when:
-        - email_1_text is defined
-        - email_subject is defined
-        - notification_number == 1
+    - name: Fail if notification key not found
+      fail:
+        msg: "notification '{{ notification_key }}' not found in notifications"
+      when: notifications[notification_key] is not defined
 
-    - name: Check if email_2_text is defined
+    - name: Set final notification
       set_fact:
-        notification: "{{ email_2_text }}"
-        subject: "{{ email_subject }}"
-      when:
-        - email_2_text is defined
-        - email_subject is defined
-        - notification_number == 2
-
-    - name: show vars
-      debug:
-        msg:
-          - "email_subject": "{{ email_subject | default('Subject is not defined') }}"
-          - "notification": "{{ notification | default('Notification is not defined') }}"
+        notification: "{{ notifications[notification_key] }}"
